# Basic-WebSocket

./: client.py  index.js  pyproject.toml  server.py
